Update Pagina web frontend estático.html

--- a/Pagina web frontend estático.html
+++ b/Pagina web frontend estático.html
@@ -394,6 +394,9 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
     </div>
   </div>
 
+<div> HOLA GITHUB</div>
+
+
 </body>
 </html>
 
