--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
   <nav class="navbar navbar-dark">
     <!-- Brand -->
     <a class="navbar-brand" href="#">
-    <img src="file:///C:/Users/A/Desktop/programacion/Yo%20programo/APLogo-20-20.png" alt="Logo" style= "width: 150px ; padding : 0px;"></a>
+    <img src="APLogo-20-20.png" alt="Logo" style= "width: 150px ; padding : 0px;"></a>
   
     <!-- Toggler Button -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -99,10 +99,10 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
 <!-- Banner header and icon --> 
 <div class="container-fluid">
 <div class="header" style="padding : 10px; padding-bottom : 0px;" >
-    <img src="file:///C:/Users/A/Desktop/programacion/Yo%20programo/M%C3%B3dulo%202/Front%20End%20proyecto%20final/Header2.png" 
+    <img src="Header2.png" 
     class ="img-fluid rounded" alt="header" height="290"; width="1350";> 
   <div class="icon rounded-circle" >
-    <img src="file:///C:/Users/A/Desktop/programacion/Yo%20programo/M%C3%B3dulo%202/Front%20End%20proyecto%20final/kdhs.jpg" class= "rounded-circle img-fluid" 
+    <img src="kdhs.jpg" class= "rounded-circle img-fluid" 
     alt="icon" height="130" width="130">
   </div>
 </div>
