--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
 <!-- Banner header and icon --> 
 <div class="container-fluid">
 <div class="header" style="padding : 10px; padding-bottom : 0px;" >
-    <img src="Header2.png" 
+    <img src="https://raw.githubusercontent.com/abrilroussy/proyecto-FrontEnd/main/Header2.png" 
     class ="img-fluid rounded" alt="header" height="290"; width="1350";> 
   <div class="icon rounded-circle" >
-    <img src="kdhs.jpg" class= "rounded-circle img-fluid" 
+    <img src="https://raw.githubusercontent.com/abrilroussy/proyecto-FrontEnd/main/kdhs.jpg" class= "rounded-circle img-fluid" 
     alt="icon" height="130" width="130">
   </div>
 </div>
